# pico

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.zed/: debug.json  (+1 more)
ext/: CMakeLists.txt
ext/scribe/: CMakeLists.txt  README.md
ext/scribe/src/: MslCompiler.cpp  MslCompiler.h  main.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  FileWatcher.cpp  FileWatcher.h  Job.cpp  Job.h  Log.cpp  Log.h  Profiler.cpp  Profiler.h  api.cpp  api.h  dllmain.h
src/core/json/: json.cpp  json.h
src/core/math/: Box.h  CameraTransform.h  LinearAlgebra.h  Math3D.h  Noise.h  Rotor.h  Vec.h  math.h
src/core/stl/: Graph.cpp  Graph.h  Hash.h  IndexTable.cpp  IndexTable.h
src/core/win32/: stdafx.h
src/document/: CMakeLists.txt  Image.cpp  Image.h  Model.cpp  Model.h  PointCloud.cpp  PointCloud.h  TriangleSoup.cpp  TriangleSoup.h  dllmain.h
src/graphics/: CMakeLists.txt  dllmain.h  hlsl2msl.cmake  wrap_hlsl_guard.cmake
src/graphics/d3d12/: D3D12Backend.cpp  D3D12Backend.h  D3D12Backend_Batch.cpp  D3D12Backend_Descriptor.cpp  D3D12Backend_Framebuffer.cpp  D3D12Backend_Pipeline.cpp  D3D12Backend_Query.cpp  D3D12Backend_Resource.cpp  D3D12Backend_Shader.cpp  D3D12Backend_Swapchain.cpp
src/graphics/drawables/: DashboardDraw.cpp  DashboardDraw.h  DashboardDrawable.cpp  DashboardDrawable.h  Dashboard_frag.hlsl  Dashboard_vert.hlsl  GizmoDraw.cpp  GizmoDraw.h  GizmoDrawable.cpp  GizmoDrawable.h  GizmoItem_vert.hlsl  GizmoNode_vert.hlsl  Gizmo_vert.hlsl  HeightmapDraw.cpp  HeightmapDraw.h  HeightmapDrawable.cpp  HeightmapDrawable.h  Heightmap_frag.hlsl  Heightmap_vert.hlsl  HexagonDraw.cpp  HexagonDraw.h  HexagonDrawable.cpp  HexagonDrawable.h  Hexagon_frag.hlsl  Hexagon_vert.hlsl  ModelDraw.cpp  ModelDraw.h  ModelDrawInspector.cpp  ModelDrawInspector.h  ModelDrawable.cpp  ModelDrawable.h  ModelDrawableInspector.cpp  ModelDrawableInspector.h  ModelInspectorPart_frag.hlsl  ModelInspectorPart_vert.hlsl  ModelPart_frag.hlsl  ModelPart_vert.hlsl  ModelUVSpaceProcessing_comp.hlsl  Ocean_comp.hlsl  PointCloud0_vert.hlsl  (+32 more)
src/graphics/gpu/: Batch.cpp  Batch.h  Blend.h  DepthStencil.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  Pipeline.cpp  Pipeline.h  Query.cpp  Query.h  Rasterizer.h  Resource.cpp  Resource.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  StreamLayout.h  StructuredBuffer.h  Swapchain.cpp  Swapchain.h  gpu.h
src/graphics/metal/: MetalBackend.h  MetalBackend.mm  MetalBackend_Batch.mm  MetalBackend_Descriptor.mm  MetalBackend_Framebuffer.mm  MetalBackend_Pipeline.mm  MetalBackend_Resource.mm  MetalBackend_Shader.mm  MetalBackend_Swapchain.mm
src/graphics/render/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  Camera_inc.hlsl  Color_inc.hlsl  Draw.cpp  Draw.h  Drawable.cpp  Drawable.h  Hexagon_inc.hlsl  Item.cpp  Item.h  Material_inc.hlsl  Mesh.cpp  Mesh.h  MeshEdge_inc.hlsl  Mesh_inc.hlsl  Paint_inc.hlsl  Part_inc.hlsl  Projection_inc.hlsl  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneModel_inc.hlsl  SceneTransform_inc.hlsl  Shading_inc.hlsl  Skin_inc.hlsl  Sky.cpp  Sky.h  Sky_inc.hlsl  Surface_inc.hlsl  Transform.cpp  Transform.h  Transform_inc.hlsl  Triangle_inc.hlsl  Viewport.cpp  Viewport.h  Viewport_inc.hlsl  (+1 more)
src/graphics/vk/: VKBackend.cpp  VKBackend.h  VKBackend_Batch.cpp  VKBackend_Descriptor.cpp  VKBackend_Framebuffer.cpp  VKBackend_Pipeline.cpp  VKBackend_Query.cpp  VKBackend_Resource.cpp  VKBackend_Shader.cpp  VKBackend_Swapchain.cpp
src/pico/: Api.cpp  Api.h  CMakeLists.txt  Forward.h  Window.cpp  Window.h  dllmain.h  mas.h  pico.cpp  pico.h
src/pico/content/: Mesh.cpp  Mesh.h  PointCloud.cpp  PointCloud.h  TriangleSoup.cpp  TriangleSoup.h
src/pico/core/: LinearAlgebra.h  Realtime.h
src/pico/d3d12/: D3D12Backend.cpp  D3D12Backend.h  D3D12Backend_Batch.cpp  D3D12Backend_Descriptor.cpp  D3D12Backend_Framebuffer.cpp  D3D12Backend_Pipeline.cpp  D3D12Backend_Resource.cpp  D3D12Backend_Shader.cpp  D3D12Backend_Swapchain.cpp
src/pico/drawables/: PointCloud0_vert.hlsl  PointCloud_frag.hlsl  PointCloud_vert.hlsl  PointcloudDrawable.cpp  PointcloudDrawable.h  TriangleSoupDrawable.cpp  TriangleSoupDrawable.h  TriangleSoup_frag.hlsl
src/pico/gpu/: Batch.cpp  Batch.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  Pipeline.cpp  Pipeline.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  StreamLayout.h  Swapchain.cpp  Swapchain.h  gpu.h
src/pico/render/: Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h  Viewport.cpp  Viewport.h  render.h
src/pico/window/: CameraController.cpp  CameraController.h  Window.cpp  Window.h
src/poco/: Api.cpp  Api.h  Batch.cpp  Batch.h  D3D12Backend.cpp  D3D12Backend.h  Device.cpp  Device.h  Forward.h  Pipeline.h  Renderer.cpp  Renderer.h  Resource.h  Scene.h  Swapchain.cpp  Swapchain.h  Viewport.cpp  Viewport.h  Window.cpp  Window.h  mas.h  poco.cpp  poco.h
src/poco/content/: Mesh.cpp  Mesh.h  PointCloud.cpp  PointCloud.h
src/poco/d3d12/: D3D12Backend.cpp  D3D12Backend.h  D3D12Backend_Batch.cpp  D3D12Backend_Descriptor.cpp  D3D12Backend_Framebuffer.cpp  D3D12Backend_Pipeline.cpp  D3D12Backend_Resource.cpp  (+2 more)
src/uix/: CMakeLists.txt  CameraController.cpp  CameraController.h  Imgui.cpp  Imgui.h  Imgui_mac.mm  Window.cpp  Window.h  Window.mm  dllmain.h
test/five/: CMakeLists.txt  pico_five.cpp  vertex.hlsl
test/pico_01/: CMakeLists.txt  pico_one.cpp
test/pico_02/: CMakeLists.txt  pico_two.cpp
test/pico_03/: CMakeLists.txt  pico_three.cpp
test/pico_04/: CMakeLists.txt  pico_four.cpp
test/pico_eye/: CMakeLists.txt  pico_eye.cpp
test/pico_interop-gdi/: CMakeLists.txt  pico_interop-gdi.cpp
test/pico_model/: CMakeLists.txt  pico_model.cpp
test/pico_ocean/: CMakeLists.txt  ocean.cpp  ocean.h  pico_ocean.cpp
test/pico_ray/: CMakeLists.txt  pico_ray.cpp
test/pico_terrain/: CMakeLists.txt  pico_terrain.cpp  terrain.cpp  terrain.h
test/pico_treemap/: CMakeLists.txt  Treemap_frag.hlsl  Treemap_vert.hlsl  pico_treemap.cpp
(+64 files in other folders)
